# otus-cpp-2018

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README.md  annotated.html  classes.html  classotus_1_1AbstractGeometryFactory-members.html  classotus_1_1AbstractGeometryFactory.html  classotus_1_1AbstractGeometryFactory__coll__graph.map  classotus_1_1AbstractGeometryFactory__coll__graph.md5  classotus_1_1AbstractGeometryFactory__inherit__graph.map  classotus_1_1AbstractGeometryFactory__inherit__graph.md5  classotus_1_1BaseListenable-members.html  classotus_1_1BaseListenable.html  classotus_1_1BaseListenable__coll__graph.map  classotus_1_1BaseListenable__coll__graph.md5  classotus_1_1BaseListenable__inherit__graph.map  classotus_1_1BaseListenable__inherit__graph.md5  classotus_1_1BaseOnClickable-members.html  classotus_1_1BaseOnClickable.html  classotus_1_1BaseOnClickable__coll__graph.map  classotus_1_1BaseOnClickable__coll__graph.md5  classotus_1_1BaseOnClickable__inherit__graph.map  classotus_1_1BaseOnClickable__inherit__graph.md5  classotus_1_1Canvas-members.html  classotus_1_1Canvas.html  classotus_1_1Canvas__coll__graph.map  classotus_1_1Canvas__coll__graph.md5  classotus_1_1Canvas__inherit__graph.map  classotus_1_1Canvas__inherit__graph.md5  classotus_1_1ClearButton-members.html  classotus_1_1ClearButton.html  classotus_1_1ClearButton__coll__graph.map  classotus_1_1ClearButton__inherit__graph.map  classotus_1_1ClearButton__inherit__graph.md5  classotus_1_1ColorButton-members.html  classotus_1_1ColorButton.html  classotus_1_1ColorButton__coll__graph.map  (+333 more)
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_1.js  files_2.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+14 more)
src/: 1196.cpp  1496.cpp  1545.cpp  1837.cpp  allocator.h  bad_iterator.h  bulk_controller.cpp  bulk_controller.h  concept_sorting.h  filters.cpp  filters.h  finder.cpp  finder.h  fixed_size_list.h  intrusive_fixed_list.h  ip_filter.cpp  lib.cpp  main.cpp  map_reduce.h  matrix.cpp  matrix.h  matrix_n.cpp  my_traits.h  mylist.h  no_default_constructible.cpp  no_default_constructible.h  print_ip.h  random_access_iterator_concept.h  rclss.cpp  rclst.cpp  server.cpp  server.h  test_main.cpp  tester.cpp  tester.h  tests.cpp  utils.cpp  utils.h
src/active/: active_logger.h  job_pool.h  threadsafe_queue.h
src/async/: async.cpp  async.h  context.cpp  context.h  threadsafe_reader.cpp  threadsafe_reader.h
src/classification/: classificaction.cpp  classificaction.h  classification.cpp  classification.h
src/clusterization/: clusterization.cpp  clusterization.h  dlib_types.h
src/command/: command.cpp  command.h  command_pool.cpp  command_pool.h  icommand.h  icommand_pool.h
src/controller/: bulk_controller.cpp  bulk_controller.h  controller.cpp  controller.h  icontroller.h
src/exceptions/: exception.cpp  exception.h  exceptions.cpp  exceptions.h
src/filter/: filters.cpp  filters.h
src/hashing/: hashing.cpp  hashing.h
src/io/: by_block_reader.cpp  by_block_reader.h  file_logger_job.cpp  file_logger_job.h  ibulklogger.h  ifilelogger.h  ireader.h  logger.cpp  logger.h  logger_job.cpp  logger_job.h  reader.cpp  reader.h  reading_state.cpp  reading_state.h
src/jobs/: request_job.cpp  request_job.h
src/k_merge/: kway_merge.h
src/model/: imodel.h  model.cpp  model.h  simple_table.cpp  simple_table.h  two_tables_storage.cpp  two_tables_storage.h
src/prefix/: find_prefix_function.cpp  find_prefix_function.h  prefix_counter.cpp  prefix_counter.h
src/radix_tree/: radix_tree.cpp  radix_tree.h
src/server/: server.cpp  server.h  session.cpp  session.h
src/utils/: counter.cpp  counter.h  geomfactory.cpp  geomfactory.h  listener.h  logger.cpp  logger.h  observe.cpp  observe.h  onclick.cpp  onclick.h  tags.h  utils.cpp  utils.h
src/view/: geometry_elements.cpp  geometry_elements.h  iview.cpp  iview.h  view.cpp  view.h  view_elements.cpp  view_elements.h
testing/: draw_clustered_out_as_buble.py  draw_clustered_output.py  draw_input_dots.py  gen_clustered_dots.py  gen_rand_dots.py
tests/: allocator_tests.cpp  alltests.cpp  fixed_size_list_tests.cpp  matrix_n_tests.cpp  matrix_tests.cpp  mylist_tests.cpp  random_access_iterator_tests.cpp  simple_test_client.py  smoke_tests.cpp  table_tests.cpp  test_struct.h  tests.cpp
